# ChatAGH_RAG

./: .pre-commit-config.yaml  dodo.py  pyproject.toml  run_locally.py
.pre-commit-cache/: db.db
scripts/: README.md  consts.py  experiment_runner.py  run_experiments.py
scripts/datasets/: sample_dataset.yaml
scripts/evaluation_tasks/: base.py  vector_search_evaluation_task.py
scripts/metrics/: base_metric.py  context_precision_metric.py  context_recall_metric.py  faithfulness_metric.py  g_eval_metrics.py
src/chat_agh/: graph.py  states.py
src/chat_agh/agents/: __init__.py  generation_agent.py  retrieval_agent.py  supervisor_agent.py
src/chat_agh/agents/retrieval/: context_retrieval.py  similarity_search.py  summary_generation.py
src/chat_agh/nodes/: generation_node.py  initial_retrieval_node.py  retrieval_node.py  supervisor_node.py
src/chat_agh/utils/: __init__.py  agents_info.py  consts.py  model_inference.py  retrieved_context.py  singletons.py  utils.py
src/chat_agh/vector_store/: mongodb.py
