[tool.poetry]
name = "chatagh-rag"
version = "0.1.0"
description = "RAG Chatbot for AGH University of Cracow"
readme = "README.md"
authors = [
  "Witold Nowogórski <nowogorskiwitold@gmail.com>",
  "Michał Dyrek <lahcim.md@gmail.com>"
]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
langchain = ">=0.3.27"
filelock = "==3.19.1"
langchain-core = ">=0.3.76"
langgraph = ">=0.6.7"
dotenv = ">=0.9.9"
pymongo = ">=4.15.0"
sentence-transformers = ">=5.1.0"
langchain-google-genai = ">=2.1.10"
rank-bm25 = ">=0.2.2"
nltk = ">=3.9.1"
scipy = ">=1.14.1"

[tool.poetry.group.dev.dependencies]
ragas = "*"
pandas = "*"
doit = "^0.36.0"
pytest = "^8.4.2"
black = "^25.1.0"
mypy = "^1.18.1"
ruff = "^0.13.0"
coverage = "^7.10.6"
pre-commit = "^3.7.0"
opik = "^1.7.30"

[tool.coverage.run]
branch = true
source = ["src/chat_agh"]

[tool.coverage.report]
show_missing = true

[tool.mypy]
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
strict_optional = true
ignore_missing_imports = true
